[tool.poetry]
name = "pytoolbox"
version = "0.1.0"
description = ""
authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pytoolbox"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
